--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To My profile!</div>
           <div class="intro-heading text-uppercase">Smirnov Nikita IDM 18-03</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#https://github.com/NikitaSmirnov17">Tell Me More</a>
         </div>
       </div>
     </header>
