--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <meta charset="utf-8">
+/    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="https://github.com/stankin/inet-2018>My group page</a>
+              <a class="nav-link js-scroll-trigger" href="https://github.com/stankin/inet-2018/">My group page</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
