--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
 
     <!-- Services -->
-    <section id="services">
+    <section id="лабораторные работы">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
