--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
               <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">№1</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Экосистема разработки программ с открытым кодом
+1.Зарегистрироваться на GitHub
+2.Подключиться к репозиторию
+3.Создать личную страницу
+4.Создать персональную веб страницу-отчет с использованием html, css, js.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
