--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">№2</h4>
+            <p class="text-muted">Разработка простого веб-приложения
+1.Собрать команду для разработки веб-приложения (SPA) и распределить роли.
+2.Разработать макет страницы веб-приложения.
+3.Прописать стили страницы. Исходный код на css.
+4.Прописать js функционал и реализовать возможность чтения json.
+Исходный код на js и json</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
