--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">Московский государственный технологический университет «Станкин»!</div>
           <div class="intro-heading text-uppercase">Smirnov Nikita IDM 18-03</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://github.com/NikitaSmirnov17">go over</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://github.com/NikitaSmirnov17">master repository</a>
         </div>
       </div>
     </header>
