--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link js-scroll-trigger" href="https://github.com/stankin/inet-2018/tree/master/IDM-18-03/">My group page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="https://github.com/NikitaSmirnov17/Nikita17">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
